# findpanics

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: code.rs  main.rs
