[package]
name = "findpanics"
version = "0.1.0"
authors = ["Philip Craig <philipjcraig@gmail.com>"]
categories = ["development-tools::debugging"]
description = "Find calls to panic functions in rust executables"
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/philipc/findpanics"

[dependencies]
addr2line = "0.11"
clap = "2"
failure = "0.1"
gimli = "0.20"
home = "0.5"
memmap = "0.7"
object = "0.17"
panopticon-amd64 = { git = "https://github.com/das-labor/panopticon" }
panopticon-core = { git = "https://github.com/das-labor/panopticon" }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
