[package]
name = "findpanics"
version = "0.1.0"
authors = ["Philip Craig <philipjcraig@gmail.com>"]
categories = ["development-tools::debugging"]
description = "Find calls to panic functions in rust executables"
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/philipc/findpanics"

[dependencies]
addr2line = "0.16"
clap = "2"
failure = "0.1"
gimli = "0.25"
home = "0.5"
memmap = "0.7"
object = "0.26"
capstone = "0.10.0"
capstone-sys = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
